--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    	 </div>
 
    	 <div class="Header-blocks">
-   	  <img class="Open-Search" src="img/Vector.svg">
-      <input class="Header-Search" type="search" placeholder="Search">
+   	  <img id="OpenMenu" class="Open-Search" src="img/Vector.svg">
+      <input id="InputSearch" class="HeaderSearch" type="search" placeholder="Search">
    	 </div>
 
    </div>
@@ -262,5 +262,6 @@
  <footer>
 
  </footer>
+ <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
