--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="sass/style.scss">
-</head>
+  </head>
 <body>
  <header>
 
@@ -55,9 +55,10 @@
            <li class="Content-blocks-li">Для всех типов кожи</li>
            <li class="Content-blocks-li">Возраст: 25+</li>
           </ul>
-
+          
+          <div class="Reitingblock">
           <div class="Reiting-Star">
-            <input id="Simple-star-5" class="Redio-star" type="radio" name="Star" value="5">
+            <input id="Simple-star-5" class="Radio-star" type="radio" name="Star" value="5">
             <label for="Simple-star-5" class="label-radio"></label>
 
             <input id="Simple-star-4" class="Radio-star" type="radio" name="Star" value="4">
@@ -71,6 +72,7 @@
 
             <input id="Simple-star-1" class="Radio-star" type="radio" name="Star" value="1">
             <label for="Simple-star-1" class="label-radio"></label>
+          </div>
           </div>
 
           <div class="Content-product">
@@ -155,9 +157,10 @@
 
                <div class="Content4-blocks-product2">
                   <h6 class="Content4-product-text">Внимание: количество товара по акции ограничено!</h6>
-
+                  
+                  <div class="Reitingblock">
                    <div class="Reiting-Star">
-                     <input id="Simple-star-5" class="Redio-star" type="radio" name="Star" value="5">
+                     <input id="Simple-star-5" class="Radio-star" type="radio" name="Star" value="5">
                      <label for="Simple-star-5" class="label-radio"></label>
 
                      <input id="Simple-star-4" class="Radio-star" type="radio" name="Star" value="4">
@@ -172,6 +175,7 @@
                      <input id="Simple-star-1" class="Radio-star" type="radio" name="Star" value="1">
                      <label for="Simple-star-1" class="label-radio"></label>
                    </div>
+                  </div>
 
                   <div class="Content4-product">
                     <h6 class="Product-title">Gialuronix gel со скидкой 50%</h6>
